--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="css/style.css" rel="stylesheet">
-</head>
+<%- include('includes/head'); -%>
 
 <body>
+    <%- include('includes/header'); -%>
 
     <main>
         <form action="dank.html">
