--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profiel</title>
-</head>
+<%- include('includes/head'); -%>
 
 <body>
-    <h1>Welkom op het profiel van <%= person %></h1>
-    <p><strong>Leeftijd: </strong><%= data.leeftijd %></p>
-    <p><strong>Geslacht: </strong><%= data.geslacht %></p>
+    <%- include('includes/header'); -%>
+    <main>
+        <h1>Welkom op het profiel van <%= person %></h1>
+        <p><strong>Leeftijd: </strong><%= data.leeftijd %></p>
+        <p><strong>Geslacht: </strong><%= data.geslacht %></p>
+    </main>
 
 </body>
 
