--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -8,12 +8,13 @@
         </a>
         <div class="links">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="#">Zon</a></li>
                 <li><a href="#">Steden</a></li>
                 <li><a href="#">Winter</a></li>
                 <li><a href="#">Last minutes</a></li>
-                <li><a href="#">Klantenservice</a></li>
+                <li><a href="contact">Klantenservice</a></li>
+                <li><a href="#">Profiel</a></li>
                 <li><a href="#">SALES</a></li>
             </ul>
         </div>
