--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,10 +19,16 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: var(--background-color);
+    background-color: rgb(147, 206, 255);
     font-family: 'Saira', sans-serif;
     color: var(--main-color);
 
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
@@ -44,6 +50,11 @@ form {
     max-width: 30em;
     background-color: rgb(147, 206, 255);
     border-radius: 5px;
+}
+
+form h2 {
+    display: flex;
+    justify-content: center;
 }
 
 input,
