Nog meer stress

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -8,9 +8,8 @@
         </a>
         <div class="links">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/">Vakantiefilter</a></li>
                 <li><a href="#">Zon</a></li>
-                <li><a href="#">Steden</a></li>
                 <li><a href="#">Winter</a></li>
                 <li><a href="#">Last minutes</a></li>
                 <li><a href="contact">Klantenservice</a></li>
@@ -21,4 +20,3 @@
     </nav>
 
 </header>
-<script src="/scripts/script.js"></script>
