--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,14 +25,6 @@ body {
 
 }
 
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    float: left;
-    margin-left: 100px;
-}
-
 header {
     background-color: rgb(0, 0, 0);
     display: flex;
@@ -46,7 +38,7 @@ header {
     z-index: 1;
 }
 
-/*formulier*/
+/*formulier die ik eerst had gebruikt ipv filter knoppen*/
 
 @media (max-width: 376px) {
     form {
@@ -59,6 +51,8 @@ header {
 form {
     background-color: rgb(147, 206, 255);
     border-radius: 5px;
+    float: right;
+    margin-left: 100px;
 }
 
 form h2 {
@@ -312,10 +306,109 @@ Bron: https: //www.youtube.com/watch?v=At4B7A4GOPg */
 
 main p {
     padding: 0 10px;
-    font-weight: 600;
 }
 
 #samenvatting {
     display: flex;
     flex-direction: column;
+}
+
+/******************/
+/* De gerenderde landen */
+/******************/
+img {
+    max-width: 100%;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    max-width: 1440px;
+    padding: 30px;
+    position: relative;
+}
+
+h1 {
+    margin: 0;
+}
+
+
+/* Input styling */
+.search {
+    background-color: white;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    color: inherit;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 14px;
+    padding: 20px;
+    min-width: 300px;
+}
+
+/* Dropdown styling */
+.dropdown {
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    font-size: 14px;
+    padding: 20px;
+    position: relative;
+}
+
+.dropdown ul {
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    display: none;
+    padding: 20px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    list-style-type: none;
+    width: 100%;
+    z-index: 99;
+}
+
+.dropdown.open ul {
+    display: block;
+}
+
+.dropdown ul li {
+    margin: 10px 0;
+}
+
+/* landen */
+.card {
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    overflow: hidden;
+    margin: 40px;
+    max-width: 100%;
+    width: 300px;
+}
+
+.card img {
+    object-fit: cover;
+    height: 200px;
+    width: 100%;
+}
+
+.card-body {
+    padding: 30px;
+}
+
+.card-body h3 {
+    margin-top: 0;
+}
+
+.container.countries {
+    margin-top: -40px;
+    justify-content: center;
 }
