--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,52 +7,37 @@
     <%- include('includes/header'); -%>
 
     <main>
-        <form action="">
 
-            <h2>Vakantiefilter</h2>
+        <section>
+            <div class="container">
+                <input id="search" class="search" type="text" placeholder="Zoek een land" />
 
-            <div>
-                <label for="countries">Favoriete landen:</label>
-                <select id="countries" name="countries" multiple="multiple"></select>
+                <div class="dropdown" id="filter">
+                    Filter op Regio
+                    <ul>
+                        <li>All</li>
+                        <li>Africa</li>
+                        <li>Americas</li>
+                        <li>Asia</li>
+                        <li>Europe</li>
+                        <li>Oceania</li>
+                    </ul>
+                </div>
             </div>
+        </section>
 
-            <div>
-                <label for="timezone">timezone:</label>
-                <select id="timezone" name="timezone"></select>
+        <section>
+            <div class="container countries" id="countries">
+                <h2>Moment geduld aub...</h2>
             </div>
+        </section>
 
-            <div>
-                <label for="regio">Regio:</label>
-                <select id="regio" name="regio"></select>
-            </div>
 
-            <div>
-                <label for="language">Taal:</label>
-                <select id="language" name="language"></select>
-            </div>
 
-            <div>
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
 
-            <div>
-                <button>Zoek</button>
-            </div>
-
-        </form>
-
-        <div id="samenvatting">
-            <p>Land: <span id="country"></span></p>
-            <p>Hoofdstad: <span id="capital"></span></p>
-            <p>Landnummer: <span id="dialing-code"></span></p>
-            <p>Currencies: <span id="currencies"></span></p>
-            <p>Region: <span id="region"></span></p>
-            <p>Subregion: <span id="subregion"></span></p>
-        </div>
 
     </main>
-    <script src="index.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
