Stress to the max

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,8 +324,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
-    margin: auto;
+    margin: 0;
     max-width: 1440px;
     padding: 30px;
     position: relative;
@@ -357,6 +356,8 @@ h1 {
     cursor: pointer;
     font-size: 14px;
     padding: 20px;
+    margin: 10px;
+    margin-bottom: 16px;
     position: relative;
 }
 
