--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
                 <input id="search" class="search" type="text" placeholder="Zoek een land" />
 
                 <div class="dropdown" id="filter">
-                    Filter op Regio
+                    Kies een regio
                     <ul>
                         <li>All</li>
                         <li>Africa</li>
@@ -21,6 +21,28 @@
                         <li>Asia</li>
                         <li>Europe</li>
                         <li>Oceania</li>
+                    </ul>
+                </div>
+                <div class="dropdown" id="filter2">
+                    Kies een taal
+                    <ul>
+                        <li>All</li>
+                        <li>Albanian</li>
+                        <li>Arabic</li>
+                        <li>Armenian</li>
+                        <li>Bulgarian</li>
+                        <li>Catalan</li>
+                        <li>Czech</li>
+                        <li>Dutch</li>
+                        <li>English</li>
+                        <li>French</li>
+                        <li>German</li>
+                        <li>Japanese</li>
+                        <li>Pashto</li>
+                        <li>Portuguese</li>
+                        <li>Spanish</li>
+                        <li>Swedish</li>
+                        <li>Vietnamese</li>
                     </ul>
                 </div>
             </div>
