--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -14,7 +14,7 @@
                 <li><a href="#">Last minutes</a></li>
                 <li><a href="contact">Klantenservice</a></li>
                 <li><a href="#">Profiel</a></li>
-                <li><a href="#">SALES</a></li>
+                <li><a href="mijnlijst">Mijn lijst</a></li>
             </ul>
         </div>
     </nav>
