--- a/public/css/style.css
+++ b/public/css/style.css
@@ -335,7 +335,7 @@ h1 {
 }
 
 
-/* Input styling */
+/* Input styling Florin Pop */
 .search {
     background-color: white;
     border-radius: 4px;
@@ -383,7 +383,7 @@ h1 {
     margin: 10px 0;
 }
 
-/* landen */
+/* landen styling van bron Florin Pop*/
 .card {
     border-radius: 4px;
     background-color: white;
