lijst werkend gemaakt

--- a/views/mijnlijst.ejs
+++ b/views/mijnlijst.ejs
@@ -11,11 +11,16 @@
         <% allelanden.forEach(function(landen){ %>
 
         <section>
+
             <h2><%= landen.land %></h2>
             <h3><%= landen.populatie %></h3>
             <h3><%= landen.regio %></h3>
             <h3><%= landen.capital %></h3>
             <h3><%= landen.language %></h3>
+
+            <form action="/delete/<%= landen._id %>" method="POST">
+                <button type="submit">Verwijder</button>
+            </form>
         </section>
         <% }) %>
 
