--- a/views/mijnlijst.ejs
+++ b/views/mijnlijst.ejs
@@ -3,20 +3,20 @@
 
 <%- include('includes/head'); -%>
 
-<body>
+<body id="mijnlijst">
     <%- include('includes/header'); -%>
+    <h1><%= title %></h1>
     <main>
-        <h1><%= title %></h1>
 
         <% allelanden.forEach(function(landen){ %>
 
         <section>
 
-            <h2><%= landen.land %></h2>
-            <h3><%= landen.populatie %></h3>
-            <h3><%= landen.regio %></h3>
-            <h3><%= landen.capital %></h3>
-            <h3><%= landen.language %></h3>
+            <h2>Land: <%= landen.land %></h2>
+            <h3>Populatie: <%= landen.populatie %></h3>
+            <h3>Regio: <%= landen.regio %></h3>
+            <h3>Hoofdstad: <%= landen.capital %></h3>
+            <h3>Taal: <%= landen.language %></h3>
 
             <form action="/delete/<%= landen._id %>" method="POST">
                 <button type="submit">Verwijder</button>
