--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -3,4 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reisplanner</title>
     <link href="/css/style.css" rel="stylesheet">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet"
+        href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
+        type="text/css">
 </head>
