--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,10 @@
 <body>
     <%- include('includes/header'); -%>
 
+    <div id='map'></div>
+
+
+
     <main>
 
         <section>
@@ -97,6 +101,11 @@
 
     </main>
     <script src="/scripts/script.js"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js">
+    </script>
+    <script src="/scripts/map.js"></script>
+
 </body>
 
 </html>
